--- a/styles/login.css
+++ b/styles/login.css
@@ -79,84 +79,53 @@
         height: 100px;
     }
 
-    .registration-container {
+    .main {
+        flex-grow: 1; 
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: 10%;
-        margin-bottom: 10%;
-    }   
-
-
-    .registration-form {
-        background-color: rgba(255, 255, 255, 0.8);
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-        width: 50%; /* Cambia el ancho según tus preferencias */
-        text-align: center;
-        margin-right: 20px; /* Espacio entre el formulario y la imagen */
     }
     
-    .registration-image img {
-        max-width: 100%;
-        height: 310px;
-        border-radius: 10px;
+
+    .formulario {
+        background: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        text-align: center;
         opacity: .8;
     }
     
-    .registration-form h2 {
-        font-size: 1.5rem;
+    .campo {
         margin-bottom: 20px;
     }
     
-    form {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-        text-align: left;
-    }
-    
-    label {
-        font-size: 1rem;
-        margin-bottom: 5px;
-    }
-    
-    input[type="text"],
-    input[type="email"],
-    input[type="password"] {
-        width: 90%;
+    input {
         padding: 10px;
+        width: 100%;
         border: 1px solid #ccc;
-        border-radius: 5px;
-        padding-left: 10px;
-    }
-
-    input[type="text"]:hover,
-    input[type="email"]:hover,
-    input[type="password"]:hover {
-        width: 90%;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        padding-left: 10px;
-        background-color: var(--color-accent);
-        opacity: .3;
+        border-radius: 4px;
     }
     
-    button[type="submit"] {
-        grid-column: span 2; /* Este botón ocupará dos columnas */
+    button {
+        padding: 10px 20px;
         background-color: var(--color-primary);
-        color: #ffffff; 
-        height: 30px;  
+        color: #fff;
         border: none;
-        border-radius: 5px;
+        border-radius: 4px;
         cursor: pointer;
     }
     
-    button[type="submit"]:hover {
+    button:hover {
         background-color: var(--color-secondary);
     }
+    
+    #closeButton {
+        background-color: transparent;
+        border: none;
+        color: var(--color-primary);
+        cursor: pointer;
+        font-size: 16px;
+    }   
 
     footer {
         background-color: var(--color-accent);
@@ -209,7 +178,3 @@
         height: 25px;
        
       }
-
-
-
-
