--- a/styles/login.css
+++ b/styles/login.css
@@ -79,17 +79,17 @@
         height: 100px;
     }
 
-    .main {
-        flex-grow: 1; 
+    main {
+        flex: 1; /* Cambiamos a flex para ocupar todo el espacio vertical */
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: 50px; /* Agregamos un poco de espacio arriba del formulario */
     }
-    
 
     .formulario {
         background: rgba(255, 255, 255, 0.8); /* Cambié la opacidad del fondo para que sea más sutil */
-        padding: 20px;
+        padding: 40px;
         border-radius: 8px;
         text-align: center;
         max-width: 400px; /* Limitamos el ancho del formulario para que no se extienda demasiado */
@@ -106,6 +106,7 @@
         width: 100%;
         border: 1px solid #ccc;
         border-radius: 4px;
+        margin-right: 10px;
     }
     
     button {
@@ -127,7 +128,18 @@
         color: var(--color-primary);
         cursor: pointer;
         font-size: 16px;
-    }   
+    }  
+    
+    .ventana-emergente {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+        padding: 10px 20px;
+        border: 1px solid #ccc;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
 
     footer {
         background-color: var(--color-accent);
