--- a/styles/registro.css
+++ b/styles/registro.css
@@ -1,10 +1,14 @@
-    :root {
-        --color-primary: #1746a2;
-        --color-secondary: #Ff731d;
-        --color-accent: #bbb737f8;
-        --color-background: #579df7;
-    }
-
+:root {
+    --color-primary: #1746a2;
+    --color-secondary: #Ff731d;
+    --color-accent: #bbb737f8;
+    --color-background: #579df7;
+    --color-text1:#ffffff;
+    --color-text2:#072566;
+    --color-border1:#ccc;
+    --color-backForm1:#ffffffcc;
+    --color-shadowForm1:#00000033;
+}   
     /* Establecer una imagen de fondo */
     body {
 
@@ -12,8 +16,8 @@
         margin: 0;
         padding: 0;
         background-image: url('../images/playaMuelle.jpg');
-        background-size: cover; /* Ajusta la imagen al tamaño del viewport */
-        background-attachment: fixed; /* Fija la imagen de fondo para que no se desplace con el contenido */
+        background-size: cover; 
+        background-attachment: fixed; 
         display: flex;
         flex-direction: column;
         min-height: 100vh;
@@ -22,8 +26,8 @@
 
     header {
         display: grid;
-        grid-template-columns: 1fr auto; /* Divide el espacio en dos columnas, una para el logo y otra para el menú */
-        align-items: center; /* Centra verticalmente los elementos en el header */
+        grid-template-columns: 1fr auto; 
+        align-items: center; 
         background-color: var(--color-accent);
         opacity: 1;
         padding: 10px 0;
@@ -34,13 +38,13 @@
     }
 
     .logo {
-        text-align: left; /* Alinea el logo a la izquierda */
+        text-align: left; /
         padding-left: 10%   ;
         
     }
 
     nav {
-        text-align: right; /* Alinea el menú a la derecha */
+        text-align: right; 
     }
 
     ul {
@@ -51,20 +55,20 @@
 
     li {
         display: inline;
-        margin-right: 20px; /* Espacio entre elementos del menú */
+        margin-right: 20px; 
         
     }
 
     a {
         text-decoration: none;
-        color: var(--color-primary); /* Color del texto del menú */
+        color: var(--color-primary); 
         font-weight: bold;
         
     }
 
     a:hover {
         text-decoration: none;
-        color: var(--color-secondary); /* Color del texto del menú */
+        color: var(--color-secondary); 
         font-weight: bold;
 
     }
@@ -93,9 +97,9 @@
         padding: 20px;
         border-radius: 10px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-        width: 50%; /* Cambia el ancho según tus preferencias */
+        width: 50%; 
         text-align: center;
-        margin-right: 20px; /* Espacio entre el formulario y la imagen */
+        margin-right: 20px; 
     }
     
     .registration-image img {
@@ -145,7 +149,7 @@
     }
     
     button[type="submit"] {
-        grid-column: span 2; /* Este botón ocupará dos columnas */
+        grid-column: span 2; 
         background-color: var(--color-primary);
         color: #ffffff; 
         height: 30px;  
@@ -163,7 +167,7 @@
         opacity: .7;
         color: var(--color-primary);
         padding: 10px 5px;
-        padding-left: 5%; /* Espacio a la izquierda */
+        padding-left: 5%; 
         padding-right: 5%;  
       }
       
@@ -189,26 +193,26 @@
       }
       
       .icon {
-        margin-right: 5px; /* Espacio entre el icono y el texto */
-        font-size: 1.2em; /* Tamaño del icono */
+        margin-right: 5px; 
+        font-size: 1.2em; 
       }
       
       .copy-right {
         display: flex;
-        justify-content: center; /* Esto centra horizontalmente el contenido */
+        justify-content: center; 
         align-items: center;
-        margin-top: 5px; /* Añade espacio entre el contenido y el borde superior del footer */
-      }
+        margin-top: 5px; 
       
       a img, p img {
         vertical-align: middle;
-        margin-bottom: 4px; /* Ajusta este valor según sea necesario */
+        margin-bottom: 4px; 
       }
       
       img {
         height: 25px;
        
       }
+    }
 
 
 
