--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -236,4 +236,78 @@ img{
    
   }
 
+/* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
+  header {
+      padding: 5px 0;
+  }
+
+  main {
+      margin-top: 20px;
+  }
+
+  .formulario {
+      width: 100%;
+      padding: 20px;
+  }
+
+  .iframe {
+      width: 100%;
+      padding: 5px;
+  }
+
+  .iframe iframe {
+      width: 100%;
+  }
+}
+
+/* Media query para pantallas medianas */
+@media (min-width: 769px) and (max-width: 1024px) {
+  header {
+      padding: 10px 0;
+  }
+
+  main {
+      margin-top: 30px;
+  }
+
+  .formulario {
+      width: 80%;
+      padding: 30px;
+  }
+
+  .iframe {
+      width: 100%;
+      padding: 10px;
+  }
+
+  .iframe iframe {
+      width: 100%;
+  }
+}
+
+/* Media query para pantallas grandes */
+@media (min-width: 1025px) {
+  header {
+      padding: 15px 0;
+  }
+
+  main {
+      margin-top: 50px;
+  }
+
+  .formulario {
+      width: 70%;
+      padding: 40px;
+  }
+
+  .iframe {
+      width: 100%;
+      padding: 15px;
+  }
+
+  .iframe iframe {
+      width: 100%;
+  }
+}
 
