--- a/styles/registro.css
+++ b/styles/registro.css
@@ -214,4 +214,47 @@
        
       }
 
+      /* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
 
+    header {
+        padding: 5px 0;
+    }
+
+    .registration-form {
+        width: 100%;
+        margin-right: 0;
+    }
+
+    .registration-image img {
+        height: 200px;
+    }
+}
+
+/* Media query para pantallas medianas  */
+@media (min-width: 769px) and (max-width: 1024px) {
+    
+    header {
+        padding: 10px 0;
+    }
+
+    .registration-image img {
+        height: 250px;
+    }
+}
+
+/* Media query para pantallas grandes  */
+@media (min-width: 1025px) {
+    
+    header {
+        padding: 15px 0;
+    }
+
+    .registration-form {
+        width: 40%;
+    }
+
+    .registration-image img {
+        height: 300px;
+    }
+}
