arreglo imagens y responsive

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -140,9 +140,10 @@
 
         .offert img {
             max-width: 100%; 
-            height: auto; 
+            height: 100%; 
             width: 100%; 
             max-height: 200px; 
+            object-fit: cover;
         }
 
         @keyframes cambiaColor {
@@ -224,7 +225,7 @@
   }
 
   .offert {
-    width: 100%;
+    width: 80%;
   }
 }
 
