cambios en el header del index, en el ifram de contactos, y se trato de agregar una api

--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -103,11 +103,13 @@ img{
     background-color: var(--color-backForm1);
     width: 98.5%;
     padding: 10px;
+    height: auto;
     
   }
   
   .iframe iframe {
     width: 100%;
+    height: auto;
     
   }
   
