--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,6 +76,31 @@
         height: 30px;
     }
 
+    /*Hamburguer menu*/
+
+  .hamburger-menu {
+    display: none; 
+    cursor: pointer;
+}
+
+  .nav-hamburguer{
+    max-height: 0;
+    overflow: hidden;
+  }
+
+  
+  
+  .bar {
+      width: 25px;
+      height: 3px;
+      background-color: var(--color-primary);
+      margin: 5px auto;
+      transition: 0.4s;
+  }
+  
+
+
+
     /* Estilos para la sección de inicio (banner) */
     .banner  {
         
@@ -222,7 +247,34 @@
 @media (max-width: 768px) {
   header {
     padding: 5px 0;
+    
   }
+
+  .hamburger-menu {
+    display: block; /* Mostramos el menú de hamburguesa en pantallas pequeñas */
+    margin-right: 20px;
+ }
+
+  
+  
+  nav {
+      display: none; /* Ocultamos el menú de navegación en pantallas pequeñas */
+  }
+
+  
+  .nav-hamburguer.active {
+     max-height: 800px;
+     background-color: var(--color-accent); /* Color de fondo blanco */
+     box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
+     text-align: left;
+     margin-left: 60%;
+     
+  }
+  .nav-hamburguer li {
+    display: flex;
+     flex-direction: column;
+  }
+}
 
   .offert {
     width: 80%;
