--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -1,6 +1,6 @@
 :root {
   --color-primary: #1746a2;
-  --color-secondary: #Ff731d;
+  --color-secondary: #ff731d;
   --color-accent: #bbb737f8;
   --color-background: #579df7;
   --color-text1: #ffffff;
@@ -21,8 +21,6 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
-
-
 
 header {
   display: grid;
@@ -85,165 +83,28 @@ main {
   display: block;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: auto;
+  background-color: var(--color-backForm1);
+  opacity: .8;
 }
 
-.formulario {
+.formulario,
+.iframe {
   background-color: var(--color-backForm1);
   color: var(--color-text1);
-  
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .formulario  {
-    background-color: var(--color-backForm1);
-    color: var(--color-text1);
-    width: 80%;
-    padding: 30px;
-  }
-  
-  .iframe {
-    background-color: var(--color-backForm1);
-    width: 98.5%;
-    padding: 10px;
-    height: auto;
-    
-  }
-  
-  .iframe iframe {
-    width: 100%;
-    height: auto;
-    
-  }
-  
-  
-  button {
-    background-color: var(--color-primary);
-    color: var(--color-text1);
-    height: 40px;
-    width: 100%;
-    margin: 10px 0;
-  }
-  
-  button:hover {
-    background-color: var(--color-secondary);
-  }
-  
-  
-  input:hover,
-  textarea:hover {
-    filter: brightness(1.1); 
-    color: var(--color-text1);
-    padding: 10px;
-    border: 1px solid var(--color-border1);
-    border-radius: 5px;
-    padding-left: 10px;
-    background-color: var(--color-accent);
-    opacity: .3;
-      
-  }
-  
-  
-  input,
-  textarea {
-    width: calc(100% - 20px); /* Ajuste para evitar desbordamiento */
-    padding: 10px;
-    margin: 10px 0;
-    font-size: 16px;
-    transition: filter 0.3s; /* Transición suave en el hover */
-    color:black;
-    opacity: 1;
-  }
-  
-  
-  
-  h2 {
-    margin: 20px 0;
-    text-align: center; 
-    color:var()
-  }
-  
-  .whatsapp-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-  }
-  
-  .whatsapp-button img {
-    width: 50px; 
-  }
-  
-  footer {
-    background-color: var(--color-accent);
-    opacity: .7;
-    color: var(--color-primary);
-    padding: 10px 5px;
-    padding-left: 5%; /* Espacio a la izquierda */
-    padding-right: 5%;  
-  }
-  
-  .foot {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  ul li {
-    margin-bottom: 10px;
-  }
-  
-  a {
-    text-decoration: none;
-    color: var(--color-primary);
-    opacity: 1;
-  }
-  
-  .icon {
-    margin-right: 5px; 
-    font-size: 1.2em; 
-  }
-  
-  .copy-right {
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    margin-top: 5px; 
-  }
-  
-  a img, p img {
-    vertical-align: middle;
-    margin-bottom: 4px; 
-  }
-
-  
-  
-
+ 
 }
 
-.formulario, .iframe {
-  width: 80%; 
-  margin: 0 auto; 
-  box-sizing: border-box; 
+.formulario{
+  padding: 30px;
+  margin: 5px;
+  margin-bottom: 0;
 }
 
 .iframe {
-  background-color: var(--color-backForm1);
-  
+  width: 97vw;
   padding: 10px;
-  margin-bottom: 20px;
-}
-
-.iframe iframe {
-  width: 100%;
+  margin-right: 5px;
 }
 
 button {
@@ -261,13 +122,14 @@ button:hover {
 input:hover,
 textarea:hover {
   filter: brightness(1.1);
-  color: var(--color-text1);
+  color: #00030a;
   padding: 10px;
   border: 1px solid var(--color-border1);
   border-radius: 5px;
   padding-left: 10px;
   background-color: var(--color-accent);
-  opacity: .3;
+  opacity: 1;
+  -webkit-filter: brightness(1.1);
 }
 
 input,
@@ -283,7 +145,7 @@ textarea {
 
 h2 {
   margin: 20px 0;
-  text-align: center;
+  text-align: center; 
   color: var(--color-text2);
 }
 
@@ -294,7 +156,7 @@ h2 {
 }
 
 .whatsapp-button img {
-  width: 50px;
+  width: 50px; 
 }
 
 footer {
@@ -303,9 +165,8 @@ footer {
   color: var(--color-primary);
   padding: 10px 5px;
   padding-left: 5%;
-  padding-right: 5%;
-  margin-top: 50px; /* Añade esta línea */
-  margin-top: 20px; /
+  padding-right: 5%;  
+  margin-top: 20px;
 }
 
 .foot {
@@ -330,20 +191,20 @@ a {
 }
 
 .icon {
-  margin-right: 5px;
-  font-size: 1.2em;
+  margin-right: 5px; 
+  font-size: 1.2em; 
 }
 
 .copy-right {
   display: flex;
-  justify-content: center;
+  justify-content: center; 
   align-items: center;
-  margin-top: 5px;
+  margin-top: 5px; 
 }
 
 a img, p img {
   vertical-align: middle;
-  margin-bottom: 4px;
+  margin-bottom: 4px; 
 }
 
 img {
