--- a/styles/registro.css
+++ b/styles/registro.css
@@ -84,6 +84,29 @@
         height: 100px;
     }
 
+    
+    /*Hamburguer menu*/
+
+  .hamburger-menu {
+    display: none; 
+    cursor: pointer;
+}
+
+  .nav-hamburguer{
+    max-height: 0;
+    overflow: hidden;
+  }
+
+  
+  
+  .bar {
+      width: 25px;
+      height: 3px;
+      background-color: var(--color-primary);
+      margin: 5px auto;
+      transition: 0.4s;
+  }
+
     .registration-container {
         display: flex;
         justify-content: center;
@@ -230,7 +253,34 @@
     .registration-image img {
         height: 200px;
     }
+
+    .hamburger-menu {
+        display: block; /* Mostramos el menú de hamburguesa en pantallas pequeñas */
+        margin-right: 20px;
+     }
+    
+      
+      
+      nav {
+          display: none; /* Ocultamos el menú de navegación en pantallas pequeñas */
+      }
+    
+      
+      .nav-hamburguer.active {
+         max-height: 800px;
+         background-color: var(--color-accent); /* Color de fondo blanco */
+         box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
+         text-align: left;
+         margin-left: 60%;
+         
+      }
+      .nav-hamburguer li {
+        display: flex;
+         flex-direction: column;
+      }
 }
+
+
 
 /* Media query para pantallas medianas  */
 @media (min-width: 769px) and (max-width: 1024px) {
