--- a/styles/cotiza.css
+++ b/styles/cotiza.css
@@ -1,5 +1,84 @@
+:root {
+  --color-primary: #1746a2;
+  --color-secondary: #Ff731d;
+  --color-accent: #bbb737f8;
+  --color-background: #579df7;
+  --color-text1:#ffffff;
+  --color-text2:#072566;
+  --color-border1:#ccc;
+  --color-backForm1:#ffffffcc;
+  --color-shadowForm1:#00000033;
+}   
 
-    /*Hamburguer menu*/
+
+/* Establecer una imagen de fondo */
+body {
+
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-image: url('../images/playaMuelle.jpg');
+  background-size: cover; 
+  background-attachment: fixed; 
+}
+
+
+header {
+  display: grid;
+  grid-template-columns: 1fr auto; 
+  align-items: center; 
+  background-color: var(--color-accent);
+  opacity: 1;
+  padding: 10px 0;
+}   
+
+header:hover {
+  opacity: .9  ;
+}
+
+.logo {
+  text-align: left; 
+  padding-left: 10% ;
+  
+}
+
+nav {
+  text-align: right; 
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+  margin-right: 20px; 
+  
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-primary); 
+  font-weight: bold;
+  
+}
+
+a:hover {
+  text-decoration: none;
+  color: var(--color-secondary);
+  font-weight: bold;
+
+}
+
+li a img{
+  height: 30px;
+}
+S
+   
+   
+   /*Hamburguer menu*/
 
     .hamburger-menu {
       display: none; 
@@ -50,4 +129,9 @@
       display: flex;
        flex-direction: column;
     }
+  }
+
+  #clima-info {
+    font-size: 3em; 
+    text-align: center;
   }
