--- a/styles/styles.css
+++ b/styles/styles.css
@@ -313,3 +313,27 @@
   width: 100%; 
   margin-top: 20px;
 }
+
+/* Estilos para footer tablets */
+@media (max-width: 768px) {
+  .foot {
+    flex-direction: column;
+    text-align: center;
+  }
+  
+  ul li {
+    margin-bottom: 0; /* Eliminar el margen entre elementos de la lista */
+  }
+}
+
+/* Estilos para footer celulares */
+@media (max-width: 480px) {
+  footer {
+    padding: 10px;
+  }
+}
+
+
+
+
+
