--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,21 +99,23 @@
       transition: 0.4s;
   }
   
-
-
-
+  
     /* Estilos para la sección de inicio (banner) */
-    .banner  {
-        
-        text-align: center;
-        padding: 100px 0;   
-       
-    }
+.banner {
+  text-align: center;
+  padding: 0; 
+  background-image: url('../images/playaMuelle.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  margin-top: 50px; 
+}
 
-    .banner img {
-        max-width: 100%;
-        height: 300px;
-    }
+.banner img {
+  max-width: 100%;
+  width: 80%; 
+  height: auto; 
+  max-height: 300px; 
+}
 
     /* Estilos para la sección de ofertas */
         .offerts {
